--- a/eks_cicd/cluster.yaml
+++ b/eks_cicd/cluster.yaml
@@ -2,12 +2,12 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: cicd-demo #cluster name
-  region: us-west-2 #desired region
+  name: cicd-dem #cluster name
+  region: ap-south-1 #desired region
 
 nodeGroups:
   - name: ng-1 #cluster node group name
-    instanceType: t2.medium #desired instance type
+    instanceType: t2.nano #desired instance type
     desiredCapacity: 3 #desired nodes count / capacity
     ssh:
       allow: false # if true - will use ~/.ssh/id_rsa.pub as the default ssh key
