--- a/eks_cicd/deployment.yaml
+++ b/eks_cicd/deployment.yaml
@@ -2,24 +2,24 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.kubernetes.io/name: cicd-demo
-    app.kubernetes.io/instance: cicd-demo-instance
+    app.kubernetes.io/name: cicd-dem
+    app.kubernetes.io/instance: cicd-dem-instance
     app.kubernetes.io/version: '1.0.0'
     app.kubernetes.io/managed-by: kubectl
-  name: cicd-demo-deployment
+  name: cicd-dem-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: cicd-demo
+      app: cicd-dem
   template:
     metadata:
       labels:
-        app: cicd-demo
+        app: cicd-dem
     spec:
       containers:
-        - image: 120717539064.dkr.ecr.us-west-2.amazonaws.com/cicd-demo:latest
+        - image: 445613004598.dkr.ecr.ap-south-1.amazonaws.com/cicd-dem:latest
           imagePullPolicy: Always
-          name: cicd-demo
+          name: cicd-dem
           ports:
             - containerPort: 3000
