--- a/eks_cicd/service.yaml
+++ b/eks_cicd/service.yaml
@@ -2,15 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.kubernetes.io/name: cicd-demo
-    app.kubernetes.io/instance: cicd-demo-instance
+    app.kubernetes.io/name: cicd-dem
+    app.kubernetes.io/instance: cicd-dem-instance
     app.kubernetes.io/version: "1.0.0"
     app.kubernetes.io/component: backend
     app.kubernetes.io/managed-by: kubectl
-  name: cicd-demo
+  name: cicd-dem
 spec:
   selector:
-    app: cicd-demo
+    app: cicd-dem
   type: LoadBalancer
   ports:
    -  protocol: TCP
